test/error/LexUtf8High.ci
õ //ERROR: Invalid UTF-8 //ERROR: Invalid character
